SERVER-60364 Fix windows unittests for backup_file_cloner

GitOrigin-RevId: 46929c9bd3493fe9e0b12d902a8e04e90a3c59d3